src/main/java/com/example/demo/errors/ValidationErrorResponse.java
package com.example.demo.errors;

import lombok.AllArgsConstructor;
import lombok.Data;

import java.time.LocalDateTime;
import java.util.Map;

@Data
@AllArgsConstructor
public class ValidationErrorResponse {
    private LocalDateTime timestamp;
    private int status;
    private Map<String, String> errors;
}
